@@ -1,3 +1,7 @@
+2005-04-11  Per Bothner  <per@bothner.com>
+
+	* Makefile.am: gui.scm needs both --with-swing and --enable-xml.
+
 2005-04-02  Per Bothner  <per@bothner.com>
 
 	* testing.scm: New file - srfi-64 (draft) reference implementation.
